--- a/testing/store-editor.html
+++ b/testing/store-editor.html
@@ -7,7 +7,7 @@
 
     <script language="javascript" type="text/javascript" src="../jquery-1.6.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="../underscore.js"></script>
-    <script language="javascript" type="text/javascript" src="../js2form_new.js"></script>
+    <script language="javascript" type="text/javascript" src="../js2form.js"></script>
     <script language="javascript" type="text/javascript" src="testing.js"></script>
 
   </head>
